# chatbot-safety

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: .gitignore
notebooks/: AnalyzeStudentUsage.ipynb
src/student_guardrails/: email_alerts.py  moderation.py  moderation_responses.py
src/student_guardrails/resources/: disallowed_words_all.txt  disallowed_words_input.txt  disallowed_words_output.txt
tests/: conftest.py  test_email_alerts.py  test_moderation.py
