[tool.poetry]
name = "chatbot-safety"
version = "0.0.1"
description = "Experimentation/analysis code and scripts"
authors = [
    "Zachary Levonian <zach@levi.digitalharbor.org>"
]
license = "MIT"
readme = "README.md"
packages = []
repository = "https://github.com/DigitalHarborFoundation/chatbot-safety.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poetry = "1.6.1"
jupyter = "^1.0.0"
jupyterlab = "^4.1.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12"
flake8 = "^6.0.0"
nbqa = "^1.6.0"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .github
    | .gitignore
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | _build
    | buck-out
    | build
    | ci
    | data
    | dist
    | docs
    | docsrc
  )/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
