[tool.poetry]
name = "chatbot-safety"
version = "0.0.1"
description = "Experimentation/analysis code and scripts"
authors = [
    "Zachary Levonian <zach@levi.digitalharbor.org>"
]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false
repository = "https://github.com/DigitalHarborFoundation/chatbot-safety.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poetry = "1.8.2"
jupyter = "^1.0.0"
jupyterlab = "^4.1.5"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
keyrings-google-artifactregistry-auth = "^1.1.2"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12"
flake8 = "^6.0.0"
nbqa = "^1.6.0"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[[tool.poetry.source]]
name = "rori-python-packages"
url = "https://europe-west1-python.pkg.dev/rori-turn/rori-python-packages/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .github
    | .gitignore
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | _build
    | buck-out
    | build
    | ci
    | data
    | dist
    | docs
    | docsrc
  )/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
